c2rust-refactor/tests/snapshots/snapshots__refactor-autoretype-autoretype_array.new.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor autoretype --rewrite-mode alongside -- tests/snapshots/autoretype_array.new --edition 2021
---
static S: [u8; 2] = [1, 2];

fn main() {
    // Something to rewrite, to force generation of old.new
    2;
}
