c2rust-refactor/tests/snapshots/snapshots__refactor-autoretype-autoretype_method.new.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor autoretype --rewrite-mode alongside -- tests/snapshots/autoretype_method.new --edition 2021
---
struct S;

impl S {
    fn f(&self) {}
}

fn main() {
    S.f();

    // Something to rewrite, to force generation of old.new
    2;
}
