c2rust-refactor/tests/snapshots/snapshots__refactor-convert_exits-convert_exits_skip.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor convert_exits --rewrite-mode alongside -- tests/snapshots/convert_exits_skip.rs --edition 2021
---
#![allow(unused)]

extern "C" {
    fn abort() -> !;
    fn exit(status: i32) -> !;
}

// Custom abort function that should NOT be transformed
mod custom {
    #[no_mangle]
    pub extern "C" fn abort() -> ! {
        loop {}
    }
}

fn test_custom_abort() {
    unsafe {
        custom::abort();
    }
}

fn main() {
    println!("This won't actually run");
}
