c2rust-refactor/tests/snapshots/snapshots__refactor-fix_unused_unsafe-fix_unused_unsafe_compile_error.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor fix_unused_unsafe --rewrite-mode alongside -- tests/snapshots/fix_unused_unsafe_compile_error.rs --edition 2021
---
fn main() {
    // Unsafe block should stay even if there is a compile error later.
    unsafe {
        let val = 123;
        let ptr = &val as *const i32;
        let _safe_val = *ptr;
    }

    // Introduce a compile error after the unsafe block.
    undefined_name;
}
