c2rust-refactor/tests/snapshots/snapshots__refactor-fix_unused_unsafe.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor fix_unused_unsafe --rewrite-mode alongside -- tests/fix_unused_unsafe/old.rs --edition 2021 -Awarnings
---
fn main() {
    // Has unsafe operations, shouldn't be modified.
    unsafe {
        let val = 123;
        let ptr = &val as *const i32;
        let _safe_val = *ptr;
    }

    unsafe {
        let x = 42;
    }

    unsafe {}

    let _ = unsafe { 5 + 5 };
}
