c2rust-refactor/tests/snapshots/snapshots__refactor-fold_let_assign.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor fold_let_assign --rewrite-mode alongside -- tests/fold_let_assign/old.rs --edition 2021 -Awarnings
---
fn main() {
    {
        let x = 5;
    }

    {
        let x = 5;
        let y = 5;
    }

    {
        let y = 5;
        let x = 5;
    }

    {
        let mut y = 17;
        let x = 5;
    }

    {
        let mut x;
        {
            x = 5;
        }
        x = 10;
    }

    {
        let x = 5;
        let y = 5;
        let mut x = ::std::mem::uninitialized();
        x = 10;
    }

    {
        let mut x = ::std::mem::uninitialized();
        ::std::mem::drop(&mut x);
        x = 10;
    }
}
