c2rust-refactor/tests/snapshots/snapshots__refactor-let_x_uninitialized.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor let_x_uninitialized --rewrite-mode alongside -- tests/let_x_uninitialized/old.rs --edition 2021 -Awarnings
---
fn main() {
    let x = ::std::mem::uninitialized();
    let y: u32 = ::std::mem::uninitialized();
    let z: Option<& /* aeiou */ u32> = ::std::mem::uninitialized();
    let (a, b) = ::std::mem::uninitialized();
}
